# qtwaylandsurfaceshortcutsinhibitor

./: CMakeLists.txt  main.cpp
app/: CMakeLists.txt  main.cpp
wayland-protocols/: CMakeLists.txt
